app/assets/stylesheets/home.css.scss
@mixin rounded-top($radius: 5px) {
    border-top-left-radius: $radius;
    border-top-right-radius: $radius;
}

@mixin rounded-bottom($radius: 5px) {
    border-bottom-left-radius: $radius;
    border-bottom-right-radius: $radius;
}

$header-txt: #FFFFFF;
$header-txt-sub: #F7F7F7;

$background-bg: #333333;
$background-bg-dark: #000000;

$midground-bg: #ECE5E5;
$midground-bg-dark: #ADA9A9;

$foreground-bg: #FFFFFF;
$foreground-bg-dark: #FDFDFD;

$background-txt: #FDFDFD;
$background-txt-light: #FFFFFF;
$background-txt-shadow: 1px 1px 0.1em #000000;
$background-txt-link: #A1A1A1;

$midground-txt: #000000;
$midground-txt-light: #868585;
$midground-txt-shadow: 1px 1px 0.1em #FFFFFF;
$midground-txt-link: #566DE6;

$foreground-txt: #000000;
$foreground-txt-light: #A1A1A1;
$foreground-txt-shadow: 1px 1px 0.1em #FFFFFF;
$foreground-txt-link: #566DE6;

/* ----------------------
Defaults
-------------------------*/

body {
    font-family: 'Arbutus Slab', serif;
    background-position: top center;
    background-repeat: repeat;
    margin: 0;
    width: 100%;
}


a, a:visited {
    text-decoration: none;
    color: #000000;
}

p {
    margin: 0 0 15px;
}

ul {
    margin-top: 0;
    margin-bottom: 15px;
}

h3 {
    margin: 10px 0;
}

h4, h5, h6 {
    margin: 5px 0;
}

/* ----------------------
   Header
   -------------------------*/
header#main {
    background-image: url(headers/header2.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 0;
    width: 100%;
    height: 580px;
    margin: 0;
    padding: 0;

    hgroup {
        font-family: 'Londrina Outline', cursive;
        font-weight: normal;
        margin-left: 20px;

        h1 {
            font-size: 160px;
            margin: 0 auto;
            color: $header-txt;
        }

        h2 {
            font-size: 100px;
            margin-top: 10px;
            width: 700px;
            color: $header-txt-sub;
        }
    }
}

/* ----------------------
   Nav
   -------------------------*/
nav {
    position: fixed;
    right: 20px;
    top: 10px;

    ul {
        font-family: 'Open Sans Condensed', Arial, Arial, Helvetica, sans-serif;

        li {
            list-style-type: none;

            a {
                display: block;
                float: right;

                &.title {
                    margin-right: 10px;
                    font-size: 16px;
                    text-shadow: 0.1em 0 0 $midground-txt-light;
                }

                &.bullet {
                    clear: both;
                    width: 37px;
                    height: 21px;
                    font-size: 15px;
                    text-align: center;
                    vertical-align: middle;
                    background-color: rgba(173, 169, 169, 0.75);
                    color: #666666;
                    box-shadow: 1px 1px 1px #000000;
                }
            }

            &:first-child a.bullet {
                @include rounded-top(5px);
            }

            &:last-child a.bullet {
                @include rounded-bottom(5px);
                border-bottom: none;
            }

            a.bullet:hover {
                color: $midground-txt;
            }

            &.current, &.hover {
                a.bullet {
                    color: $midground-txt;
                }
            }
        }
    }
}

/* ----------------------
   Global Post Format
   -------------------------*/
article {
    padding: 30px 0 40px 0;
    margin: 0 auto;
    width: 100%;
    min-height: 500px;

    header {
        text-align: center;
        margin: 0 auto 0;
        width: 750px;

        h1 {
            padding: 0 10px 0 0;
            margin-bottom: -3px;
        }

        time {
            display: block;
            color: $foreground-txt-light;
            width: 750px;
            margin: 0 auto;
            padding: 0 0 10px 0;
            text-align: right;
            border-top: solid 1px $foreground-txt-light;
        }
    }

    .body {
        margin: 0 auto;
        width: 750px;
        text-align: justify;
        padding: 0 30px;
    }

    .images {
        margin: 30px auto 10px;
        width: 80%;
        text-align: center;
        overflow: auto;
        z-index: 1;

        img {
            margin: 0px;
            width: auto;
            height: auto;
            max-height: 200px;
            margin-bottom: 10px;
        }
    }
}

/* ----------------------
   Space Formats
   -------------------------*/
article.midground {
    background: url(layout/divider-midground-top.png) repeat-x center top, url(layout/divider-midground-bottom.png) repeat-x center bottom, $midground-bg;
    color: $midground-txt;
    text-shadow: $midground-txt-shadow;

    time {
        color: $midground-txt-light;
        border-color: $midground-txt-light;
    }

    a {
        color: $midground-txt-link;
    }
}

article.foreground {
    background: url(layout/divider-foreground-top.png) repeat-x center top, url(layout/divider-foreground-bottom.png) repeat-x center bottom, $foreground-bg;
    color: $foreground-txt;
    text-shadow: $foreground-txt-shadow;

    time {
        border-color: $foreground-txt;
    }

    a {
        color: $foreground-txt-link;
    }
}

article.background {
    background: url(layout/divider-background-top.png) repeat-x center top, url(layout/divider-background-bottom.png) repeat-x center bottom, $background-bg;
    color: $background-txt;
    text-shadow: $background-txt-shadow;

    a {
        color: $background-txt-link;
    }

    time {
        border-color: $background-txt;
    }
}

/* ----------------------
   Title Formats
   -------------------------*/
article.notes header {
    width: 960px;

    time {
        width: 960px;
    }
}


/* ----------------------
   Body Formats
   -------------------------*/
article.two-column-text div.body {
    -moz-column-count: 2; /* Firefox */
    -webkit-column-count: 2; /* Safari and Chrome */
    column-count: 2;
    -moz-column-gap: 35px; /* Firefox */
    -webkit-column-gap: 35px; /* Safari and Chrome */
    column-gap: 35px;
}

article.notes div.body {
    width: 960px;
}

article.notes div.body blockquote, article.single-column-text div.body blockquote {
    margin-top: 25px;
    padding: 0 120px;
    position: relative;
    font-style: italic;
    min-height: 70px;
}

article.notes div.body blockquote:before, article.single-column-text div.body blockquote:before {
    display: block;
    content: "\201C";
    font-size: 120px;
    position: absolute;
    left: 22px;
    top: -12px;
    color: #A1A1A1;
}


/* ----------------------
   Figure Formats
   -------------------------*/
article.quote figure.quote-big {
    font-family: 'Francois One', sans-serif;
    font-style: italic;
    letter-spacing: -3px;
    word-spacing: -3px;
    text-align: center;
    color: $background-txt;
    text-shadow: none;

    blockquote {
        display: inline;
        font-size: 200px;
        line-height: 200px;
        margin-top: 50px;
    }

    figcaption {
        display: inline;
        font-size: 75px;
        line-height: 75px;
        margin: 0;
    }
}


/* ----------------------
   Image Formats
   -------------------------*/
article.two-column-text div.body img {
    display: block;
    margin: 10px auto;
    max-width: 350px;
    box-shadow: 2px 2px 0.1em #A1A1A1;
}

article.two-column-text.background div.body img {
    box-shadow: 2px 2px 0.1em #000000;
}

article.series div.images img {
    border-radius: 5px;
    border-top: solid 10px #FFFFFF;
    border-left: solid 10px #FFFFFF;
    border-right: solid 10px #FFFFFF;
    border-bottom: solid 60px #FFFFFF;
    box-shadow: 2px 2px 0 #A1A1A1;
    max-width: 300px;
    max-height: 300px;
}

article.album div.images img {
    max-height: 150px;
}


/* ----------------------
   Syntax Highlighting with CodeRay
   -------------------------*/

.CodeRay {
    display: block;
    border-radius: 5px;
    box-shadow: 2px 2px 0 #A1A1A1;
    background-color: #232323;
    font-family: 'Courier New', 'Terminal', monospace;
    color: #E6E0DB;
    padding: 3px 5px;
    overflow: auto;
    font-size: 12px;
    margin: 12px 0;
    text-shadow: none;
}

.CodeRay pre {
    margin: 0px;
    padding: 0px;
}

table.CodeRay { border-collapse: collapse; width: 100%; padding: 2px }

table.CodeRay td {
    padding: 1em 0.5em;
    vertical-align: top;
}

.CodeRay .line-numbers, .CodeRay .no {
  background-color: #5A5353;
  color: #AAA;
  text-align: right;
  border-radius: 5px;
}

.CodeRay .line-numbers a {
  color: #000000;
}

.CodeRay .line-numbers tt { font-weight: bold }
.CodeRay .line-numbers .highlighted { color: red }

.CodeRay .an { color:#E7BE69 }                      /* html attribute */
.CodeRay .c  { color:#BC9358; font-style: italic; } /* comment */
.CodeRay .ch { color:#509E4F }                      /* escaped character */
.CodeRay .cl { color:#FFF }                         /* class */
.CodeRay .co { color:#FFF }                         /* constant */
.CodeRay .gv { color:#D0CFFE }                      /* global variable */
.CodeRay .i  { color:#A4C260 }                      /* integer */
.CodeRay .il { background:#151515 }                 /* inline code */
.CodeRay .iv { color:#D0CFFE }                      /* instance variable */
.CodeRay .pp { color:#E7BE69 }                      /* doctype */
.CodeRay .rx { color:#A4C260 }                      /* regex */
.CodeRay .s  { color:#A4C260 }                      /* string */
.CodeRay .sy { color:#6C9CBD }                      /* symbol */
.CodeRay .ta { color:#E7BE69 }                      /* html tag */
.CodeRay .pc { color:#6C9CBD }                      /* boolean */

.CodeRay .tag { color:#070 }
.CodeRay .keyword  { color:#CB7832 }
.CodeRay .function { color:#FFC56D }
.CodeRay .tag-special { color:#D70; font-weight:bold }
.CodeRay .type { color:#339; font-weight:bold }
.CodeRay .regexp .function  { color:#404; font-weight: bold }
.CodeRay .regexp .content { color:#808 }
.CodeRay .regexp .delimiter { color:#404 }
.CodeRay .float { color:#A4C260 }

